recursion.logo.lessons.recursion.logo.koch.Koch.scala.error
Koch:12: error: not found: value lenght
  if (lenght<0){
      ^Koch:13: error: not found: value lenght
    avance(lenght);
           ^